feat: finalizando ajustes nos endpoints, e adicionando dockerfile