@@ -4,7 +4,8 @@ import br.com.fiap.challengeSofttekAPI.dto.AvaliacaoRiscosRequestDTO;
 import br.com.fiap.challengeSofttekAPI.dto.AvaliacaoRiscosResponseDTO;
 import br.com.fiap.challengeSofttekAPI.model.AvaliacaoRiscos;
 import br.com.fiap.challengeSofttekAPI.repository.AvaliacaoRiscosRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import br.com.fiap.challengeSofttekAPI.util.SecurityUtils;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -12,20 +13,23 @@ import org.springframework.web.server.ResponseStatusException;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import static br.com.fiap.challengeSofttekAPI.util.SecurityUtils.*;
+
+@Slf4j
 @Service
 public class AvaliacaoRiscosService {
 
     private final AvaliacaoRiscosRepository repository;
 
-    @Autowired
     public AvaliacaoRiscosService(AvaliacaoRiscosRepository repository) {
         this.repository = repository;
     }
 
     @Transactional
-    public AvaliacaoRiscosResponseDTO salvar(String colaboradorId, AvaliacaoRiscosRequestDTO dto) {
+    public AvaliacaoRiscosResponseDTO salvar(AvaliacaoRiscosRequestDTO dto) {
+        String colaboradorId = getCurrentUserId();
+        log.debug("Criando avaliação de risco | colaborador={} | mediaPercentual={}", colaboradorId, dto.mediaPercentual());
 
         AvaliacaoRiscos avaliacao = new AvaliacaoRiscos();
         avaliacao.setColaboradorId(colaboradorId);
@@ -33,43 +37,69 @@ public class AvaliacaoRiscosService {
         avaliacao.setMediaPercentual(dto.mediaPercentual());
 
         AvaliacaoRiscos salvo = repository.save(avaliacao);
+        log.info("Avaliação de risco criada | id={} | colaborador={}", salvo.getId(), colaboradorId);
+
         return new AvaliacaoRiscosResponseDTO(salvo);
     }
 
-    public List<AvaliacaoRiscosResponseDTO> listarPorColaborador(String colaboradorId) {
-        return repository.findByColaboradorId(colaboradorId)
+    public List<AvaliacaoRiscosResponseDTO> listarPorColaborador() {
+        String colaboradorId = getCurrentUserId();
+        log.debug("Listando avaliações | colaborador={}", colaboradorId);
+
+        List<AvaliacaoRiscosResponseDTO> avaliacoes = repository.findByColaboradorId(colaboradorId)
                 .stream()
                 .map(AvaliacaoRiscosResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
+
+        log.info("Avaliações encontradas | colaborador={} | total={}", colaboradorId, avaliacoes.size());
+        return avaliacoes;
     }
 
-    public AvaliacaoRiscosResponseDTO buscarPorIdEColaborador(String id, String colaboradorId) {
+    public AvaliacaoRiscosResponseDTO buscarPorIdEColaborador(String id) {
+        String colaboradorId = getCurrentUserId();
+        log.debug("Buscando avaliação | id={} | colaborador={}", id, colaboradorId);
+
         AvaliacaoRiscos avaliacao = repository.findByIdAndColaboradorId(id, colaboradorId)
-                .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Avaliação não encontrada ou não pertence ao colaborador"));
+                .orElseThrow(() -> {
+                    log.warn("Avaliação não encontrada | id={} | colaborador={}", id, colaboradorId);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND, "Avaliação não encontrada ou não pertence ao colaborador");
+                });
+
+        log.info("Avaliação encontrada | id={} | colaborador={}", id, colaboradorId);
         return new AvaliacaoRiscosResponseDTO(avaliacao);
     }
 
     @Transactional
-    public AvaliacaoRiscosResponseDTO atualizar(String id, String colaboradorId, AvaliacaoRiscosRequestDTO dto) {
-        AvaliacaoRiscos avaliacao = repository.findByIdAndColaboradorId(id, colaboradorId)
-                .orElseThrow(() -> new ResponseStatusException(
-                        HttpStatus.NOT_FOUND, "Avaliação não encontrada ou não pertence ao colaborador"));
+    public AvaliacaoRiscosResponseDTO atualizar(String id, AvaliacaoRiscosRequestDTO dto) {
+        String colaboradorId = getCurrentUserId();
+        log.debug("Atualizando avaliação | id={} | colaborador={} | mediaPercentual={}", id, colaboradorId, dto.mediaPercentual());
 
+        AvaliacaoRiscos avaliacao = repository.findByIdAndColaboradorId(id, colaboradorId)
+                .orElseThrow(() -> {
+                    log.warn("Tentativa de atualizar falhou | id={} | colaborador={}", id, colaboradorId);
+                    return new ResponseStatusException(HttpStatus.NOT_FOUND, "Avaliação não encontrada ou não pertence ao colaborador");
+                });
 
         avaliacao.setMediaPercentual(dto.mediaPercentual());
         avaliacao.setDataAvaliacao(LocalDateTime.now());
 
-        AvaliacaoRiscos atualizada = repository.save(avaliacao);
-        return new AvaliacaoRiscosResponseDTO(atualizada);
+        AvaliacaoRiscos atualizado = repository.save(avaliacao);
+        log.info("Avaliação atualizada | id={} | colaborador={}", atualizado.getId(), colaboradorId);
+
+        return new AvaliacaoRiscosResponseDTO(atualizado);
     }
 
     @Transactional
-    public void deletar(String id, String colaboradorId) {
+    public void deletar(String id) {
+        String colaboradorId = getCurrentUserId();
+        log.debug("Removendo avaliação | id={} | colaborador={}", id, colaboradorId);
+
         if (!repository.existsByIdAndColaboradorId(id, colaboradorId)) {
-            throw new ResponseStatusException(
-                    HttpStatus.NOT_FOUND, "Avaliação não encontrada ou não pertence ao colaborador");
+            log.warn("Tentativa de exclusão falhou | id={} | colaborador={}", id, colaboradorId);
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Avaliação não encontrada ou não pertence ao colaborador");
         }
+
         repository.deleteById(id);
+        log.info("Avaliação removida | id={} | colaborador={}", id, colaboradorId);
     }
 }
